<resources>
    <string name="app_name">UniSearch</string>
    <string name="w1">Welcome to Uni-Search</string>

    <string name="body">We know that your next step in education is a big one.
        Uni- Search will enable you to find your perfect university in your preferable location.
        By following our simple step-by-step search tool you’ll be able to easily find which
        University suit you best and compare them. </string>

    <string name="b1">Proceed</string>

    <string name="tv1">text1</string>
    <string name="tv2">text2</string>
    <string name="tv3">text3</string>
    <string name="next">Next</string>
    <string name="nav_search">Search</string>
    <string name="nav_list">List</string>
    <string name="nav_fav">Favourites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textView">Text View</string>
    <string name="title_pic">Title Picture</string>
    <string name="lorum_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer
        took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
        but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in
        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>
